kubernetes/Apps/mongo-service.yml
---
apiVersion: v1
kind: Service
metadata:
  name: mongodb
  labels:
    app: search-engine
    component: mongodb
spec:
  ports:
  - port: 27017
    protocol: TCP
    targetPort: 27017
  selector:
    app: search-engine
    component: mongodb
