kubernetes/Apps/search-crawler-mongodb-service.yml
---
apiVersion: v1
kind: Service
metadata:
  name: crawler-db
  labels:
    app: search-engine
    component: mongodb
    crawler-db: "true"
spec:
  ports:
  - port: 27017
    protocol: TCP
    targetPort: 27017
  selector:
    app: search-engine
    component: mongodb
    crawler-db: "true"
