kubernetes/Apps/search-crawler-rabbitmq-service.yml
---
apiVersion: v1
kind: Service
metadata:
  name: crawler-rabbitmq
  labels:
    app: search-engine
    component: rabbitmq
    crawler-rabbitmq: "true"
spec:
  ports:
  - port: 8080
    protocol: TCP
    targetPort: 8080
  selector:
    app: search-engine
    component: rabbitmq
    crawler-rabbitmq: "true"
