kubernetes/Apps/search-crawler-service.yml
---
apiVersion: v1
kind: Service
metadata:
  name: crawler
  labels:
    app: search-engine
    component: crawler
spec:
  ports:
    - port: 8080
      protocol: TCP
      targetPort: 8080
  selector:
    app: search-engine
    component: crawler
