kubernetes/Apps/search-ui-mongodb-service.yml
---
apiVersion: v1
kind: Service
metadata:
  name: ui-db
  labels:
    app: search-engine
    component: mongodb
    ui-db: "true"
spec:
  ports:
  - port: 27017
    protocol: TCP
    targetPort: 27017
  selector:
    app: search-engine
    component: mongodb
    ui-db: "true"
