kubernetes/Apps/search-ui-service.yml
---
apiVersion: v1
kind: Service
metadata:
  name: ui
  labels:
    app: search-engine
    component: ui
spec:
  ports:
  - port: 8000
    protocol: TCP
    targetPort: 8000
  selector:
    app: search-engine
    component: ui
